# udp_socket

./: README.md  main.py  pyproject.toml  server.py
network_call/: logging.py  udp_socket.py
network_call/api/: healthz.py
